--- a/cowork_project_management_flow/views/cowork_scheme_preliminary.xml
+++ b/cowork_project_management_flow/views/cowork_scheme_preliminary.xml
@@ -34,19 +34,19 @@
                         <group string="预估总成本" readonly="1">
                             <field name="currency_id" invisible="1"/>
                             <button type="object" class="oe_highlight" name="summary_all" string="统计合算" attrs="{'invisible': [('state', '=', 'business')]}"/>
-                            <field name="total_labor_cost" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'readonly': [('state', '=', 'business')]}" readonly="1" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
+                            <field name="total_labor_cost" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'readonly': [('state', '=', 'business')]}" readonly="1" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow"/>
                             <field name="total_material_cost" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'readonly': [('state', '=', 'business')]}" readonly="1"/>
-                            <field name="total_taxed_cost" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'readonly': [('state', '=', 'business')]}" readonly="1" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
+                            <field name="total_taxed_cost" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'readonly': [('state', '=', 'business')]}" readonly="1" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow"/>
                         </group>
                     </group>
                     <hr/>
                     <group string="1.人力成本">
                         <field name="labor_cost_lines" nolabel="1" attrs="{'readonly': [('state', '!=', 'technology')]}">
                             <tree editable="bottom">
-                                <field name="job_id" required="1" options="{'no_create_edit': True}"/>
-                                <field name="count"/>
+                                <field name="job_id" required="1" options="{'no_create_edit': True}" string="*岗位"/>
+                                <field name="count" string="*人数"/>
                                 <field name="hours_per_day"/>
-                                <field name="count_day"/>
+                                <field name="count_day" string="*工作天数"/>
                                 <field name="unit_price" widget="monetary" options="{'currency_field': 'currency_id'}" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
                                 <field name="total_hours"/>
                                 <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" sum="总计" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
