--- a/cowork_project_management_flow/views/cowork_contract.xml
+++ b/cowork_project_management_flow/views/cowork_contract.xml
@@ -6,43 +6,43 @@
         <field name="arch" type="xml">
             <form string="商务合同审批">
                 <header>
-                    <button name="action_to_director" string="提交" type="object" class="oe_highlight" states='draft'/>
+                    <button name="action_to_director" string="提交" type="object" class="oe_highlight" states='draft' groups="cowork_project_management_flow.access_group_merchant_assistant_in_cowork_project_management_flow,cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow,cowork_project_management_flow.general_managerment_director,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
 
-                    <button name="action_to_general" string="审批通过" type="object" class="oe_highlight" states='director'/>
-                    <button name="back_to_draft" string="驳回" type="object" class="oe_highlight" states='director'/>
+                    <button name="action_to_general" string="审批通过" type="object" class="oe_highlight" states='director' groups="cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow,cowork_project_management_flow.general_managerment_director,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
+                    <button name="back_to_draft" string="驳回" type="object" class="oe_highlight" states='director' groups="cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow,cowork_project_management_flow.general_managerment_director,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
 
-                    <button name="action_to_managerment" string="审批通过" type="object" class="oe_highlight" states='general'/>
-                    <button name="back_to_diector" string="驳回" type="object" class="oe_highlight" states='general'/>
+                    <button name="action_to_managerment" string="审批通过" type="object" class="oe_highlight" states='general' groups="cowork_project_management_flow.general_managerment_director,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
+                    <button name="back_to_diector" string="驳回" type="object" class="oe_highlight" states='general' groups="cowork_project_management_flow.general_managerment_director,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
 
-                    <button name="action_to_pass" string="审批通过" type="object" class="oe_highlight" states='managerment'/>
-                    <button name="back_to_general" string="驳回" type="object" class="oe_highlight" states='managerment'/>
+                    <button name="action_to_pass" string="审批通过" type="object" class="oe_highlight" states='managerment' groups="cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
+                    <button name="back_to_general" string="驳回" type="object" class="oe_highlight" states='managerment' groups="cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
 
                     <field name="state" widget="statusbar" statusbar_visible="draft,director,general,managerment,pass" readonly="1" />
                 </header>
                 <sheet>
                     <h1>
-                        <field name="name" required="1" placeholder="合同名称"/>
+                        <field name="name" required="1" placeholder="合同名称" attrs="{'readonly':[('state','!=','draft')]}"/>
                     </h1>
                     <group>
                         <group>
-                            <field name="date"  required="1"/>
+                            <field name="date"  required="1" attrs="{'readonly':[('state','!=','draft')]}"/>
                         </group>
                         <group>
-                            <field name="approval_date" />
+                            <field name="approval_date" readonly="1"/>
                         </group>
                     </group>
                     <group>
                         <group>
-                            <field name="need_mark"/>
+                            <field name="need_mark" attrs="{'readonly':[('state','!=','draft')]}"/>
                         </group>
                         <group>
-                            <!-- <field name="purchase_id" attrs="{'invisible':[('sale_id','!=',False)]}"/>
-                            <field name="sale_id" attrs="{'invisible':[('purchase_id','!=',False)]}"/> -->
+                            <field name="purchase_id" attrs="{'invisible':[('sale_id','!=',False)],'readonly':[('state','!=','draft')]}"/>
+                            <field name="sale_id" attrs="{'invisible':[('purchase_id','!=',False)],'readonly':[('state','!=','draft')]}"/>
                         </group>
                     </group>
                    
                     <group string="文件明细">
-                        <field name="contract_ids" nolabel="1">
+                        <field name="contract_ids" nolabel="1" attrs="{'readonly':[('state','!=','draft')]}">
                             <tree editable="bottom">
                                 <field name="contract" required="1"/>
                                 <field name="name"/>
@@ -50,7 +50,7 @@
                         </field>
                     </group>
                     <group string="其他事项">
-                        <field name="comments" nolabel="1" />
+                        <field name="comments" nolabel="1" attrs="{'readonly':[('state','!=','draft')]}"/>
                     </group>
                 </sheet>
                 <div class="oe_chatter">
@@ -81,12 +81,12 @@
             <search string="商务合同审批">
                 <field name="name" filter_domain="[('name','ilike',self)]"/>
                 <field name="purchase_id"/>
-                <!-- <field name="sale_id"/> -->
+                <field name="sale_id"/>
                 <field name="approval_date"/>
                 <field name="state"/>
                 <filter name="date" string="申请日期" context="{'group_by':'date'}"/>
                 <filter name="purchase_id" string="采购订单" context="{'group_by':'purchase_id'}"/>
-                <!-- <filter name="sale_id" string="销售订单" context="{'group_by':'sale_id'}"/> -->
+                <filter name="sale_id" string="销售订单" context="{'group_by':'sale_id'}"/>
                 <filter name="approval_date" string="审批日期" context="{'group_by':'approval_date'}"/>
                 <filter name="state" string="状态" context="{'group_by':'state'}"/>
             </search>
@@ -101,6 +101,6 @@
     </record>
     
     <menuitem id="menu_contract_approval_flow_root" name="合同审批" web_icon="cowork_project_management_flow,static/description/contract.png"/>
-    <menuitem id="menu_cowork_contract" name="合同审批" parent="menu_contract_approval_flow_root" sequence="1" action="general_managerment_director"/>
+    <menuitem id="menu_cowork_contract" name="合同审批" parent="menu_contract_approval_flow_root" sequence="10" action="action_contract_approval"/>
 
 </odoo>
