--- a/cowork_project_management_flow/views/cowork_bom.xml
+++ b/cowork_project_management_flow/views/cowork_bom.xml
@@ -157,6 +157,7 @@
             <tree string="方案设计" default_order="write_date desc">
                 <field name="name"/>
                 <field name="project_id"/>
+                <field name="user_id"/>
                 <field name="state"/>
             </tree>
         </field>
