--- a/cowork_project_management_flow/views/cowork_purchase_order.xml
+++ b/cowork_project_management_flow/views/cowork_purchase_order.xml
@@ -14,6 +14,7 @@
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
+                        <button type="object" class="oe_stat_button" icon="fa-cube" string="物料变更" name="action_to_change_info"/>
                     </div>
                     <h1>
                         <field name="name"  attrs="{'readonly': [('state', '!=', 'draft')]}"/>
@@ -57,6 +58,8 @@
                                     <field name="plan_date" readonly="1"/>
                                     <field name="comment"/>
                                     <field name="currency_id" invisible="1"/>
+                                    <field name="state" invisible="1"/>
+                                    <button name="button_change" attrs="{'invisible':[('state','!=','draft')]}" string="更改物料申请" type="object"/>
                                 </tree>
                             </field>
                             <group class="oe_subtotal_footer oe_right">
@@ -75,6 +78,7 @@
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="activity_ids" widget="mail_activity"/>
                     <field name="message_ids" widget="mail_thread"/>
                 </div>
             </form>
@@ -154,8 +158,9 @@
                 <group>
                     <group>
                         <field name="invoice_type"/>
+                        <field name="pay_type"  attrs="{'readonly':['|',('payment_state','!=','draft'),'|',('payment_type','=','part')]}"/>
                          <!-- attrs="{'readonly':[('payment_state','=','no')]}" -->
-                        <field name="pay_type"  attrs="{'readonly':['|',('payment_state','=','no'),'|',('payment_type','=','part'),('payment_state','=','done')]}"/>
+                        <!-- <field name="pay_type"  attrs="{'readonly':['|',('payment_state','=','no'),'|',('payment_type','=','part'),('payment_state','=','done')]}"/> -->
                     </group>
                     <group>
                         <field name="payment_type" readonly="1"/>
@@ -171,9 +176,11 @@
                         <span
                             attrs="{'invisible': [('prepay_method', '!=', 'percentage')]}" class="oe_inline">%</span>
                     </div>
-                    <!-- <group>
-                        <field name="prepay_money" attrs="{'invisible':[('pay_type','!=','prepay')]}"/>
-                    </group> -->
+                </group>
+                <group>                    
+                    <group>
+                        <field name="purchase_contact" options="{'no_create_edit':True}"/>
+                    </group>
                 </group>
             </page>
             </notebook>
@@ -229,6 +236,7 @@
             <xpath expr="//header" position="after">
                 <header>
                     <button name="button_to_approval" attrs="{'invisible': [('payment_state', '!=', 'draft')]}" string="提交" type="object" class="oe_highlight" groups="account.group_account_invoice"/>
+                    <button name="account_user_refuse" attrs="{'invisible': [('payment_state', '!=', 'draft')]}" string="驳回" type="object" groups="account.group_account_invoice"/>
 
                     <button name="button_to_pass" string="审批通过" type="object" class="oe_highlight" groups="account.group_account_manager" attrs="{'invisible': [('payment_state', '!=', 'approval')]}"/>
                     <button name="back_to_draft" string="驳回" type="object" attrs="{'invisible': [('payment_state', '!=', 'approval')]}" groups="account.group_account_manager"/>
