--- a/cowork_project_management_flow/views/cowork_quote_order.xml
+++ b/cowork_project_management_flow/views/cowork_quote_order.xml
@@ -24,7 +24,14 @@
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
-                        <button type="object" class="oe_stat_button" icon="fa-bars" string="物料方案" name="button_material_scheme_order"/>
+                        <button type="object" class="oe_stat_button" icon="fa-bars" name="button_material_scheme_order">
+                            <div class="o_form_field o_stat_info">
+                                <span class="o_stat_value">
+                                    <field name="bom_count"/>
+                                </span>
+                                <span class="o_stat_text">物料方案</span>
+                            </div>
+                        </button>
                         <button type="object" class="oe_stat_button" icon="fa-shopping-bag" string="采购申请" name="button_to_requisition"/>
                     </div>
                     <h1>
@@ -111,6 +118,7 @@
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="activity_ids" widget="mail_activity"/>
                     <field name="message_ids" widget="mail_thread"/>
                 </div>
             </form>
