--- a/cowork_project_management_flow/views/cowork_contract.xml
+++ b/cowork_project_management_flow/views/cowork_contract.xml
@@ -28,6 +28,7 @@
                             <field name="date"  required="1" attrs="{'readonly':[('state','!=','draft')]}"/>
                         </group>
                         <group>
+                            <field name="user_id" readonly="1"/>
                             <field name="approval_date" readonly="1"/>
                         </group>
                     </group>
