增加汇总菜单

--- a/cowork_project_management_flow/views/cowork_purchase_order.xml
+++ b/cowork_project_management_flow/views/cowork_purchase_order.xml
@@ -96,6 +96,7 @@
                 <field name="user_id"/>
                 <field name="date"/>
                 <field name="state"/>
+                <field name="amount_total"/>
                 <!-- <field name="qty"/> -->
                 <!-- <field name="uom_id"/> -->
             </tree>
